--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-h4: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rbga(0,0,0,.25), 0.125em 0.125em, 0.25em rgba(0,0,0,.15);
 }
 
 @media (min-width: 800px) {
@@ -31,13 +33,17 @@
 
 /* General styles */
 
-body {
+body { 
     background: var(--clr-dark);
     color: var(--clr-dark);
     margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
+}
+
+section { 
+    padding: 5em 2em;
 }
 
 img {
@@ -48,8 +54,10 @@ img {
 strong { font-weight: var(--fw-bold);}
 
 
+/* Typography */
+
 h1,h2,h3 {
-    line-height: 1.1;
+    line-height: 1;
     margin: 0;
     
 }
@@ -75,4 +83,49 @@ h3 { font-size: var(--fs-h3) }
 .section__subtitle--intro, .section__subtitle--about {
     background: var(--clr-accent);
     font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+}
+
+/* Header */
+nav {
+    display: none;
+}
+
+/* Intro section */
+
+.intro {
+    position: relative;
+}
+
+.intro__img {
+    box-shadow: var(--bs);
+}
+
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        grid-column-gap: 1em ;
+        grid-template-areas: 
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+
+    .intro__img {
+        grid-area: img;
+        min-width: 250 px;
+        position: relative;
+        z-index: 2;
+    }
+
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
 }
