--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     --ff-secondary: 'Open Sans', sans-serif;
 
     --fw-reg: 300;
-    --fw-bold: 900; 
+    --fw-bold: 1000; 
 
     --clr-light: #fff;
     --clr-dark: #303030;
@@ -27,7 +27,7 @@
 @media (min-width: 800px) {
     :root {
         --fs-h1: 4.5rem;
-         --fs-h2: 3.75rem;
+        --fs-h2: 3.75rem;
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
@@ -55,6 +55,29 @@ img {
 
 strong { font-weight: var(--fw-bold);}
 
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+/* Button */
+.btn {
+    display: inline-block;
+    padding: 1.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(---fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
 /* Typography */
 
 h1,
@@ -145,6 +168,52 @@ nav { display: none;}
 
 .my-services {
     background-color: var(--clr-dark);
-    background-image: url(../img/);
+    background-image: url(/Images/Test1.png);
+    background-size: cover;
+    background-blend-mode: multiply;
     color: var(--clr-light);
+    text-align: center;
+}
+
+.section__title--services {
+   color: var(--clr-accent);
+   position: relative; 
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-light);
+    opacity: 0.25;
+}
+
+.services {
+    margin-bottom: 4em;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service + .service {
+        margin-left: 2em;
+    }
+} 
+
+/* About me */
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
 }
